Removed almost every warning
/refactoring